# argus-ai

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AMBIENTE.md  ARGUS_AI_SPEC.md  CHECKLIST_SEGURANCA.md  CLAUDE.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  SECURITY.md  SETUP_GUIDE.md  alembic.ini  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  update_sw_version.sh
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy-monitoring.yml  deploy.yml  security.yml
.scratch/cadastrar-nova-pessoa-home/: spec.md
.scratch/complementar-abordagem-existente/: spec.md
.scratch/deteccao-duplicidade-pessoa/: spec.md
.scratch/exclusao-segura-fotos-vinculos/: spec.md
.scratch/frontend-e2e-coverage/: spec.md
alembic/: env.py
alembic/versions/: 0193ae0cadf6_add_bpm_table_and_bpm_id_to_guarnicoes.py  08ef2221d8ba_schema_inicial.py  1862e349651c_adicionar_bairro_e_cidade_em_enderecos_.py  1ab2b1fc05fc_limpar_vinculos_automaticos_observacao.py  2b532a309319_add_compressao_status_to_fotos.py  31f2875a7047_uppercase_dados_existentes.py  32f74a0867c0_ocorrencia_nomes_envolvidos.py  3df2fb27cad9_usuario_guarnicao_id_nullable.py  45215d6a95a6_merge_heads.py  48e9ff4bf4be_adicionar_vinculos_manuais.py  4d259d0fa8ae_adicionar_veiculo_id_em_fotos.py  4f6309edf92f_adicionar_estado_em_enderecos_pessoa.py  56f5053e17fd_add_perfil_sessao_to_usuarios.py  599854985e28_add_client_id_em_pessoas_e_veiculos_.py  6531e2eeac14_uppercase_nome_de_usuario.py  7e93f610776f_ocorrencia_data_ocorrencia.py  8a8a149bf2ce_add_isolamento_abordagens_em_bpms.py  9a79fc5e1da2_guarnicao_id_opcional_em_usuarios.py  9a9e5535d7b3_adicionar_pessoa_veiculos.py  a133a5b5dac8_add_nome_mae_em_pessoa.py  a1b2c3d4e5f6_guarnicao_id_obrigatorio_em_usuarios.py  a1b2c3d4e5f6_localidades_e_fks_endereco.py  a1b2c3d4e5f6_server_default_ativo_e_indices_vetoriais.py  a1b2c3d4e5f6_usuario_guarnicao_id_nullable.py  a1b2c3d4e5f7_add_thumbnail_url.py  a9f77a36acfb_add_totp_secret_usuario.py  ac82533aca4d_add_isolamento_abordagens_em_guarnicoes.py  b2c3d4e5f6a7_indices_foreign_keys.py  b2c3d4e5f6a8_audit_log_usuario_id_nullable.py  b7162740aeeb_ocorrencia_abordagem_id_nullable.py  b7c1d2e3f4a5_add_admin_permissions_usuarios.py  c3d4e5f6a7b8_audit_jsonb_multitenant_softdelete.py  c3d4e5f6a8b9_usuario_tentativas_falhas.py  cc1234567890_guarnicao_id_obrigatorio_em_usuarios.py  d10f90d496ce_backfill_guarnicao_id_em_fotos_legadas.py  d5730d65225c_adicionar_pessoa_id_em_abordagem_.py  d594993f0855_merge_heads.py  e1f2a3b4c5d6_softdelete_relacionamento_pessoas.py  e7ba40973225_localidades_e_fks_endereco.py  eab4eec560e4_adicionar_tabela_pessoa_observacoes.py  (+3 more)
app/: config.py  dependencies.py  main.py  worker.py
app/api/: health.py
app/core/: auth_cookie.py  crypto.py  exceptions.py  logging_config.py  login_guard.py  middleware.py  permissions.py  rate_limit.py  security.py  upload_validation.py  worker_health.py
app/database/: session.py
app/models/: __init__.py  abordagem.py  audit_log.py  base.py  bpm.py  endereco.py  foto.py  guarnicao.py  legislacao.py  localidade.py  ocorrencia.py  passagem.py  pessoa.py  pessoa_observacao.py  pessoa_veiculo.py  relacionamento.py  usuario.py  veiculo.py  vinculo_manual.py
app/repositories/: abordagem_repo.py  base.py  foto_repo.py  legislacao_repo.py  localidade_repo.py  ocorrencia_repo.py  passagem_repo.py  pessoa_repo.py  pessoa_veiculo_repo.py  relacionamento_repo.py  usuario_repo.py  veiculo_repo.py
app/schemas/: abordagem.py  auth.py  bpm.py  consulta.py  foto.py  legislacao.py  localidade.py  ocorrencia.py  passagem.py  pessoa.py  pessoa_observacao.py  pessoa_veiculo.py  rag.py  relacionamento.py  sync.py  validators.py  veiculo.py  vinculo_manual.py
app/services/: abordagem_service.py  access_audit.py  analytics_service.py  audit_service.py  auth_service.py  bpm_service.py  client_id_dedup.py  consulta_service.py  embedding_service.py  equipe_service.py  face_service.py  foto_service.py  geocoding_service.py  legislacao_service.py  llm_service.py  localidade_service.py  notification_service.py  ocorrencia_service.py  ocr_service.py  passagem_service.py  pessoa_observacao_service.py  pessoa_service.py  pessoa_veiculo_service.py  rag_service.py  relacionamento_service.py  storage_service.py  sync_service.py  text_utils.py  usuario_admin_service.py  veiculo_service.py  watermark_service.py
app/tasks/: embedding_generator.py  face_processor.py  pdf_processor.py  thumbnail_backfill.py  video_processor.py
app/utils/: imaging.py  s3.py
deploy/: nginx-initial.conf  nginx.conf
docker/: Caddyfile  api.Dockerfile  db.Dockerfile
docs/: API.md  DATA_SANITIZATION.md  DEPLOY.md  LGPD.md  MAKING_PUBLIC.md  MEU_GUIA_DE_ESTUDOS.md  PRODUCTION_SECURITY.md  ambiente-local.md  auditoria-status.md  code-review-consolidado.md  disaster-recovery.md  oci-disk-encryption.md  runbook-argus-app-role.md  secret-rotation.md
docs/adr/: 001-offline-first.md  002-pgvector-embeddings.md  003-multi-tenancy.md
docs/manual/: README.md  build.mjs
docs/mockups/: ocorrencias-mockup.html
docs/plans/: 2026-03-06-consulta-campo-melhorias-design.md  2026-03-06-consulta-campo-melhorias.md  2026-03-07-agrupamento-veiculos-fotos.md  2026-03-07-design-system-containers-fotos-pessoa-detalhe-impl.md  2026-03-08-busca-ocorrencias.md  (+95 more)
frontend/: index.html  manifest.json  sw.js
monitoring/: MANUAL_MONITORAMENTO.md
plans/: load-test-setup.md
scripts/: anonimizar_dados.py  backfill_foto_principal.py  backfill_thumbnails.py  backup_rclone.sh  backup_to_clouds.sh  check_lock_drift.py  create_app_role.sql  definir_super_admin.py  deploy.sh  fix_prod_cors.sh  generate_encryption_key.py  generate_icons.py  init_db.py  init_extensions.sql  migrar_localidades_texto.py  reset_usuario.py  restore_from_backup.sh  security_check.sh  seed_legislacao.py  setup_oracle.sh  setup_rclone.sh  sync_from_prod.sh
tests/: conftest.py  factories.py
(+230 files in other folders)
