[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-ai"
version = "2.0.0"
description = "Sistema de apoio operacional com IA"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    "geoalchemy2>=0.15.0",
    # Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "cryptography>=42.0.0",
    # HTTP
    "httpx>=0.27.0",
    # AI / RAG
    "numpy>=1.26.0",
    "sentence-transformers>=2.3.0",
    "pymupdf>=1.23.0",
    # Image
    "pillow>=10.0.0",
    # Storage
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    # Worker
    "arq>=0.26.0",
    # Cache
    "redis>=5.0.0",
    # Production server
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "factory-boy>=3.3.0",
]
vision = [
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "easyocr>=1.7.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["S", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
