[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-ai"
version = "2.0.0"
description = "Sistema de apoio operacional com IA"
requires-python = ">=3.11"
dependencies = [
    # Web
    # Cap <0.137: fastapi 0.137 cria _IncludedRouter (sem .path) em include
    # aninhado, e prometheus-fastapi-instrumentator (<8.0) quebra ao ler
    # route.path → 500 em toda rota instrumentada. 0.136.1 é o último bom.
    "fastapi>=0.110.0,<0.137",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.27",
    "slowapi>=0.1.10",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.29.0",
    "alembic>=1.18.4",
    "pgvector>=0.4.2",
    "geoalchemy2>=0.20.0",
    # Validation
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # Auth
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.2.0",
    "cryptography>=49.0.0",
    "pyotp>=2.9",
    # HTTP
    "httpx>=0.27.0",
    # AI / RAG
    "numpy>=1.26.0",
    "sentence-transformers>=5.5.1",
    "pymupdf>=1.23.0",
    # Image
    "pillow>=12.2.0",
    "pillow-heif>=0.18.0",
    # Storage
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    # Worker
    "arq>=0.28.0",
    # Cache
    # Teto <6 obrigatorio: arq exige redis[hiredis]<6 — redis 6/7/8 quebra o worker (ver PR #32)
    "redis>=5.0.0,<6",
    # Production server
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "factory-boy>=3.3.0",
    # Supply chain hardening: pip-tools para gerar lock, pip-audit para CVEs.
    "pip-tools>=7.5.3",
    "pip-audit>=2.7.0",
]
vision = [
    "insightface>=1.0.1",
    "onnxruntime>=1.16.0",
    "easyocr>=1.7.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["S", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
